<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="90"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icon_main"
            android:contentDescription="@string/icon"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:scaleType="fitEnd"
            app:srcCompat="@drawable/main_icon"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp"
            tools:ignore="NestedWeights" />

        <ImageButton
            android:id="@+id/button_settings"
            android:contentDescription="@string/button_settings"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/clear"
            android:scaleType="fitEnd"
            android:src="@drawable/settings" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:background="@color/cream"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/button_pomo"
            android:contentDescription="@string/button_pomo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="0dp"
            android:layout_weight="0.5"
            android:background="@color/cream"
            android:scaleType="fitCenter"
            android:src="@drawable/button_pomo"
            tools:ignore="NestedWeights" />

        <ImageButton
            android:id="@+id/button_sns"
            android:contentDescription="@string/button_sns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="0dp"
            android:layout_weight="0.5"
            android:background="@color/cream"
            android:scaleType="fitCenter"
            android:src="@drawable/button_sns" />

        <ImageButton
            android:id="@+id/button_help"
            android:contentDescription="@string/help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="48dp"
            android:layout_weight="0.1"
            android:background="@color/cream"
            android:scaleType="fitCenter"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/help" />
    </LinearLayout>

</LinearLayout>