<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF6E4">

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/po_frame"
        tools:layout_marginEnd="0dp"
        tools:layout_marginStart="0dp"
        android:contentDescription="@string/pomo_frame" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="411dp"
        android:layout_height="58dp"
        android:background="#F9F9F9F9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageViewLeft"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:src="@drawable/button_invisible" />

            <ImageView
                android:id="@+id/imageViewRight"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:src="@drawable/button_invisible" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="98dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="#00FFFFFF"
            android:contentDescription="@string/icon_tomato"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/app_logo" />

    </FrameLayout>

    <TextView
        android:id="@+id/textView28"
        android:layout_width="346dp"
        android:layout_height="207dp"
        android:layout_marginTop="192dp"
        android:text="@string/text_pomo_loading"
        android:textSize="60sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView28" />


</androidx.constraintlayout.widget.ConstraintLayout>