<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF6E4">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="411dp"
        android:layout_height="58dp"
        android:background="#F9F9F9F9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="98dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="#00FFFFFF"
            android:contentDescription="情報アイコン"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/app_logo" />

    </FrameLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_help_pagenum"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginBottom="50dp"

        android:background="#00FFFFFF"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="128dp"
            android:layout_marginEnd="128dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_help_page_num1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:contentDescription="@string/desc_help_page_num1"
                android:scaleType="fitCenter"
                android:src="@drawable/image_help_pagestatus_white_false" />

            <ImageView
                android:id="@+id/image_help_page_num2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:contentDescription="@string/desc_help_page_num2"
                android:scaleType="fitCenter"
                android:src="@drawable/image_help_pagestatus_white_false" />

            <ImageView
                android:id="@+id/image_help_page_num3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:contentDescription="@string/desc_help_page_num3"
                android:scaleType="fitCenter"
                android:src="@drawable/image_help_pagestatus_white_false" />

            <ImageView
                android:id="@+id/image_help_page_num4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:contentDescription="@string/desc_help_page_num4"
                android:scaleType="fitCenter"
                android:src="@drawable/image_help_pagestatus_white_true" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="120dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/help_icon_sn" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="50dp"
        android:text="SNSは許さんモード"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:lineSpacingExtra="8sp"
        android:text="このモードでは\n あらかじめ時間を設定しておき、\n 決められた時間の間はSNSなどのアプリを \nロックします。\n \nなお、勉強に使いたいアプリがSNSとして\n 登録されている場合は設定画面から、\n 変更できます。 "
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>